src/test/deca/context/valid/op_bool_bin.deca
// Description:
//    Programme testant les opérateurs binaires booléens.
//
// Resultats:
//    
//
// Historique:
//    cree le 17/01/2022
{
true || false;
true && true;
true == true;
true != false;
}