src/test/deca/context/invalid/bool_incorrects.deca
// Opération booléenne incorrecte

// Date: 20.01.2022

{
boolean b = 2 || true;
}
